--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "array.prototype.find": "^2.2.0",
+    "axios": "^0.26.1",
     "babel-plugin-macros": "^3.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
